EKS/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: eks-main-app
  name: service-main
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app-main
